fixed img being too large in directory

--- a/lesson9/styles/small.css
+++ b/lesson9/styles/small.css
@@ -358,6 +358,7 @@ footer {
 }
 .cards section img {
     padding: 5%;
+    max-width: 90%;
 }
 .cards section a {
     color: black
